--- a/app/src/main/res/layout/list_item_douban_minor.xml
+++ b/app/src/main/res/layout/list_item_douban_minor.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="videoMinorVM"
             type="com.example.echo_kt.ui.video.bean.VideoBean.VideoMinorBean" />
@@ -16,28 +17,28 @@
 
         <ImageView
             android:id="@+id/imageView2"
+            resId="@{videoMinorVM.imgPath}"
             android:layout_width="130dp"
             android:layout_height="160dp"
             android:layout_marginStart="8dp"
             android:layout_marginTop="16dp"
             android:layout_marginEnd="8dp"
+            android:scaleType="fitXY"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_bias="0.498"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:srcCompat="@tools:sample/avatars"
-            url="@{videoMinorVM.imgPath}"
-            android:scaleType="fitXY"
-            android:contentDescription="TODO" />
+            tools:ignore="ContentDescription"
+            tools:srcCompat="@tools:sample/avatars" />
 
         <TextView
             android:id="@+id/textView"
+            style="@style/text_oneLine"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:layout_marginTop="16dp"
             android:text="@{videoMinorVM.title}"
             android:textStyle="bold"
-            style="@style/text_oneLine"
             app:layout_constraintEnd_toEndOf="@+id/imageView2"
             app:layout_constraintStart_toStartOf="@+id/imageView2"
             app:layout_constraintTop_toBottomOf="@+id/imageView2" />
