--- a/app/src/main/res/layout/notify_player_big.xml
+++ b/app/src/main/res/layout/notify_player_big.xml
@@ -7,18 +7,17 @@
 
     <ImageView
         android:id="@+id/player_album_art"
-        android:layout_width="60dp"
-        android:layout_height="60dp"
+        android:layout_width="70dp"
+        android:layout_height="70dp"
         android:layout_alignParentStart="true"
         android:layout_centerVertical="true"
-        android:layout_marginStart="5dp"
         android:scaleType="fitXY"
         tools:ignore="ContentDescription" />
 
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="70dp"
+        android:layout_marginStart="80dp"
         android:layout_centerVertical="true"
         android:layout_marginEnd="180dp"
         android:orientation="vertical">
@@ -69,8 +68,8 @@
             android:id="@+id/player_previous"
             android:layout_width="40dp"
             android:layout_height="40dp"
-            android:layout_marginLeft="4dp"
-            android:layout_marginRight="2dp"
+            android:layout_marginStart="4dp"
+            android:layout_marginEnd="2dp"
             android:scaleType="center"
             android:src="@android:drawable/ic_media_previous"
             tools:ignore="ContentDescription" />
