--- a/app/src/main/res/layout/audio_list_dialog.xml
+++ b/app/src/main/res/layout/audio_list_dialog.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="mainVm"
             type="com.example.echo_kt.ui.main.MainViewModel" />
@@ -13,40 +14,34 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent">
 
-        <LinearLayout
-            android:gravity="center_vertical"
-            android:id="@+id/linearLayout4"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+        <ImageView
+            android:id="@+id/imageModePic"
+            resId="@{mainVm.playModePic}"
+            android:layout_width="34dp"
+            android:layout_height="34dp"
+            android:layout_margin="10dp"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toTopOf="parent">
+            app:layout_constraintTop_toTopOf="parent"
+            tools:ignore="ContentDescription" />
 
-            <ImageView
-                android:id="@+id/imageModePic"
-                android:layout_width="34dp"
-                android:layout_height="34dp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                url="@{mainVm.playModePic}"
-                android:layout_margin="10dp" />
-
-            <TextView
-                android:id="@+id/imageModeText"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:text="@{mainVm.playModeText}"
-                style="@style/text_oneLine_18"
-                tools:text="播放模式"
-                android:layout_marginVertical="10dp"
-                app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toTopOf="parent" />
-
-        </LinearLayout>
+        <TextView
+            android:id="@+id/imageModeText"
+            style="@style/text_oneLine_18"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:layout_marginVertical="10dp"
+            android:layout_marginStart="8dp"
+            android:text="@{mainVm.playModeText}"
+            app:layout_constraintBottom_toBottomOf="@+id/imageModePic"
+            app:layout_constraintStart_toEndOf="@+id/imageModePic"
+            app:layout_constraintTop_toTopOf="@+id/imageModePic"
+            tools:text="播放模式" />
 
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/bottom_list"
             android:layout_width="match_parent"
             android:layout_height="500dp"
+            android:layout_marginTop="8dp"
             android:clipToPadding="false"
             android:paddingTop="@dimen/list_item_spacing_half"
             android:paddingBottom="@dimen/list_item_spacing_half"
@@ -54,7 +49,7 @@
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/linearLayout4"
+            app:layout_constraintTop_toBottomOf="@+id/imageModePic"
             app:layout_constraintVertical_bias="0"
             tools:context=".AudioListDialogFragment"
             tools:listitem="@layout/audio_list_dialog_item" />
