--- a/app/src/main/res/layout/fragment_add_songs.xml
+++ b/app/src/main/res/layout/fragment_add_songs.xml
@@ -1,9 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="addSongs"
             type="android.view.View.OnClickListener" />
@@ -12,6 +13,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:fitsSystemWindows="true"
         android:orientation="vertical"
         tools:context=".ui.main.songListFragment.AddSongsFragment">
 
@@ -33,12 +35,12 @@
             android:id="@+id/rv_Songs"
             android:layout_width="match_parent"
             android:layout_height="0dp"
-            tools:listitem="@layout/list_item_add_song"
             app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"
             app:layout_constraintBottom_toTopOf="@+id/ll_addSongs"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
-            app:layout_constraintTop_toBottomOf="@+id/toolbar" />
+            app:layout_constraintTop_toBottomOf="@+id/toolbar"
+            tools:listitem="@layout/list_item_add_song" />
 
         <LinearLayout
             android:id="@+id/ll_addSongs"
@@ -54,8 +56,8 @@
             <Button
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/add"
-                android:onClick="@{addSongs}"/>
+                android:onClick="@{addSongs}"
+                android:text="@string/add" />
         </LinearLayout>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
