--- a/app/src/main/res/layout/fragment_local_song.xml
+++ b/app/src/main/res/layout/fragment_local_song.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="vm"
             type="com.example.echo_kt.ui.main.ListSongViewModel" />
@@ -12,6 +13,7 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:fitsSystemWindows="true"
         tools:context=".ui.main.songListFragment.LocalSongFragment">
 
         <TextView
@@ -37,8 +39,8 @@
             android:layout_marginEnd="16dp"
             android:layout_marginBottom="8dp"
             android:background="@drawable/radius_24"
-            android:foreground="?android:attr/selectableItemBackground"
             android:elevation="2dp"
+            android:foreground="?android:attr/selectableItemBackground"
             android:text="@string/text_scanLocalSongs"
             app:layout_constraintBottom_toTopOf="@+id/rvLocalSong"
             app:layout_constraintEnd_toEndOf="parent"
@@ -54,7 +56,6 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/scan"
-            tools:listitem="@layout/audio_list_dialog_item">
-        </androidx.recyclerview.widget.RecyclerView>
+            tools:listitem="@layout/audio_list_dialog_item"/>
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
