--- a/app/src/main/res/layout/home_fragment.xml
+++ b/app/src/main/res/layout/home_fragment.xml
@@ -4,12 +4,15 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="vmHome"
             type="com.example.echo_kt.ui.main.HomeViewModel" />
+
         <variable
             name="jumpSearch"
             type="android.view.View.OnClickListener" />
+
         <variable
             name="newSongList"
             type="android.view.View.OnClickListener" />
@@ -18,8 +21,8 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        tools:context=".ui.main.HomeFragment"
-        android:paddingHorizontal="5dp">
+        android:paddingHorizontal="5dp"
+        tools:context=".ui.main.HomeFragment">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/clTitle"
@@ -70,11 +73,11 @@
                 android:layout_width="40dp"
                 android:layout_height="40dp"
                 android:background="@drawable/radius_16_theme"
+                android:contentDescription="@string/setting"
                 android:src="@android:drawable/ic_menu_sort_by_size"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                android:contentDescription="@string/setting" />
+                app:layout_constraintTop_toTopOf="parent" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.recyclerview.widget.RecyclerView
@@ -87,9 +90,9 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/clTitle"
-            tools:spanCount="3"
             tools:itemCount="3"
-            tools:listitem="@layout/item_text_image" />
+            tools:listitem="@layout/item_text_image"
+            tools:spanCount="3" />
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/constraintLayout2"
@@ -104,8 +107,8 @@
                 android:id="@+id/textView6"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
-                android:text="@string/mySongList"
                 android:background="@drawable/radius_10_hollow"
+                android:text="@string/mySongList"
                 android:textSize="20sp"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
@@ -115,13 +118,13 @@
                 android:id="@+id/ibtNewSongList"
                 android:layout_width="30dp"
                 android:layout_height="30dp"
+                android:contentDescription="@string/addSonglist"
                 android:onClick="@{newSongList}"
                 android:scaleType="fitXY"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintTop_toTopOf="parent"
-                app:srcCompat="@mipmap/add"
-                android:contentDescription="@string/addSonglist" />
+                app:srcCompat="@drawable/ic_add" />
         </androidx.constraintlayout.widget.ConstraintLayout>
 
         <androidx.recyclerview.widget.RecyclerView
