--- a/app/src/main/res/layout/item_text_image.xml
+++ b/app/src/main/res/layout/item_text_image.xml
@@ -4,6 +4,7 @@
     xmlns:tools="http://schemas.android.com/tools">
 
     <data>
+
         <variable
             name="bean"
             type="com.example.echo_kt.data.ImageAndTextBean" />
@@ -17,30 +18,31 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="90dp"
         android:layout_height="90dp"
-        android:padding="3dp"
-        android:onClick="@{clickListener}"
-        android:elevation="5dp"
         android:layout_margin="10dp"
+        android:background="@drawable/radius_10_hollow"
+        android:elevation="5dp"
         android:foreground="?android:attr/selectableItemBackgroundBorderless"
-        android:background="@drawable/radius_10_hollow">
+        android:onClick="@{clickListener}"
+        android:padding="3dp">
 
         <ImageView
             android:id="@+id/imageView3"
-            app:url="@{bean.imageId}"
+            resId="@{bean.imageId}"
             android:layout_width="65dp"
             android:layout_height="65dp"
             app:layout_constraintBottom_toTopOf="@+id/textView4"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            tools:srcCompat="@mipmap/echo" />
+            tools:srcCompat="@mipmap/echo"
+            tools:ignore="ContentDescription" />
 
         <TextView
             android:id="@+id/textView4"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:text="@{bean.text}"
             android:gravity="center"
+            android:text="@{bean.text}"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="@+id/imageView3"
             app:layout_constraintStart_toStartOf="@+id/imageView3"
