--- a/app/src/main/res/layout/list_item_fragment_product.xml
+++ b/app/src/main/res/layout/list_item_fragment_product.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<layout xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:android="http://schemas.android.com/apk/res/android">
+<layout xmlns:tools="http://schemas.android.com/tools"
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto">
 
     <data>
         <!--   true显示文字，false显示图片     -->
         <variable
             name="textOrImage"
             type="boolean" />
+
         <variable
             name="data"
             type="com.example.echo_kt.data.ProductBean" />
@@ -20,10 +22,10 @@
         <TextView
             android:id="@+id/item_Text"
             isGone="@{!textOrImage}"
-            android:text="@{data.text}"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/text_margin"
+            android:text="@{data.text}"
             android:textAppearance="?attr/textAppearanceListItem"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
@@ -33,7 +35,7 @@
         <ImageView
             android:id="@+id/item_Image"
             isGone="@{textOrImage}"
-            url="@{data.image}"
+            resId="@{data.image}"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:scaleType="fitXY"
@@ -41,6 +43,6 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toTopOf="parent"
-            android:contentDescription="TODO" />
+            tools:ignore="ContentDescription" />
     </androidx.constraintlayout.widget.ConstraintLayout>
 </layout>
