--- a/app/src/main/res/layout/setting_fragment.xml
+++ b/app/src/main/res/layout/setting_fragment.xml
@@ -1,11 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
 <layout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
-    xmlns:app="http://schemas.android.com/apk/res-auto">
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools">
 
     <data>
-        <import type="android.view.View"/>
-        <import type="com.example.echo_kt.utils.CustomUtilKt"/>
+
+        <import type="android.view.View" />
+
+        <import type="com.example.echo_kt.utils.CustomUtilKt" />
+
         <variable
             name="vmSetting"
             type="com.example.echo_kt.ui.setting.SettingViewModel" />
@@ -14,14 +17,15 @@
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
+        android:fitsSystemWindows="true"
         tools:context=".ui.setting.SettingFragment">
 
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/constraintLayout"
             android:layout_width="match_parent"
             android:layout_height="45dp"
-            android:elevation="5dp"
             android:background="@color/white60"
+            android:elevation="5dp"
             android:gravity="center_vertical"
             android:orientation="horizontal"
             app:layout_constraintEnd_toEndOf="parent"
@@ -32,13 +36,13 @@
                 android:id="@+id/ivBack"
                 android:layout_width="50dp"
                 android:layout_height="50dp"
+                android:background="?android:attr/selectableItemBackground"
+                android:contentDescription="@string/setting"
                 android:padding="15dp"
                 android:src="@drawable/ic_detail_back"
-                android:background="?android:attr/selectableItemBackground"
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintLeft_toLeftOf="parent"
-                app:layout_constraintTop_toTopOf="parent"
-                android:contentDescription="@string/setting" />
+                app:layout_constraintTop_toTopOf="parent" />
 
             <TextView
                 android:layout_width="wrap_content"
@@ -81,12 +85,13 @@
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintTop_toBottomOf="@+id/btn_update" />
+
         <androidx.constraintlayout.widget.ConstraintLayout
             android:id="@+id/clSeekBar"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:padding="5dp"
             android:background="@color/white60"
+            android:padding="5dp"
             android:visibility="@{!vmSetting.countdownBean.countdownState ? View.GONE : View.VISIBLE }"
             app:layout_constraintEnd_toEndOf="@+id/switchTimeOff"
             app:layout_constraintStart_toStartOf="@+id/switchTimeOff"
@@ -149,9 +154,9 @@
         <ProgressBar
             android:id="@+id/progressBar"
             style="?android:attr/progressBarStyle"
-            android:visibility="gone"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:visibility="gone"
             app:layout_constraintBottom_toBottomOf="@+id/btn_update"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/btn_update"
@@ -161,23 +166,23 @@
             android:id="@+id/updateState"
             android:layout_width="0dp"
             android:layout_height="0dp"
+            android:contentDescription="@string/updateComplete"
             app:layout_constraintBottom_toBottomOf="@+id/btn_update"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintStart_toEndOf="@+id/btn_update"
             app:layout_constraintTop_toTopOf="@+id/btn_update"
-            app:srcCompat="@mipmap/ok"
-            android:contentDescription="@string/updateComplete" />
+            app:srcCompat="@mipmap/ok" />
 
         <androidx.appcompat.widget.AppCompatButton
             android:id="@+id/btn_changeBackground"
+            style="@style/text_oneLine_16"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            style="@style/text_oneLine_16"
             android:layout_marginTop="16dp"
-            android:gravity="center_vertical"
-            android:text="@string/select_background"
             android:background="@drawable/radius_10_hollow"
             android:elevation="2dp"
+            android:gravity="center_vertical"
+            android:text="@string/select_background"
             app:layout_constraintEnd_toEndOf="@+id/switchFloatWindow"
             app:layout_constraintStart_toStartOf="@+id/switchFloatWindow"
             app:layout_constraintTop_toBottomOf="@+id/switchFloatWindow"
