--- a/app/src/main/res/values-night/styles.xml
+++ b/app/src/main/res/values-night/styles.xml
@@ -24,6 +24,7 @@
         <item name="android:textStyle">bold</item>
         <item name="android:maxLines">1</item>
         <item name="android:ellipsize">end</item>
+        <item name="fontFamily">@font/comic</item>
     </style>
     <style name="text_link">
         <item name="android:textColor">#5C7FFF</item>
@@ -31,22 +32,26 @@
         <item name="android:textStyle">bold</item>
         <item name="android:maxLines">1</item>
         <item name="android:ellipsize">end</item>
+        <item name="fontFamily">@font/comic</item>
     </style>
     <style name="text_oneLine">
         <item name="android:maxLines">1</item>
         <item name="android:ellipsize">end</item>
+        <item name="fontFamily">@font/comic</item>
     </style>
     <style name="text_oneLine_18">
         <item name="android:maxLines">1</item>
         <item name="android:ellipsize">end</item>
         <item name="android:textSize">18sp</item>
         <item name="android:textColor">?android:attr/textColorPrimary</item>
+        <item name="fontFamily">@font/comic</item>
     </style>
     <style name="text_oneLine_16">
         <item name="android:maxLines">1</item>
         <item name="android:ellipsize">end</item>
         <item name="android:textSize">16sp</item>
         <item name="android:textColor">?android:attr/textColorPrimary</item>
+        <item name="fontFamily">@font/comic</item>
     </style>
     <style name="navigation" parent="Theme.AppCompat.DayNight">
         <item name="colorPrimary">#E5E5E5</item>
