--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -25,6 +25,7 @@
         <item name="android:textStyle">bold</item>
         <item name="android:maxLines">1</item>
         <item name="android:ellipsize">end</item>
+        <item name="fontFamily">@font/comic</item>
     </style>
     <style name="text_link">
         <item name="android:textColor">#2F58EF</item>
@@ -32,22 +33,26 @@
         <item name="android:textStyle">bold</item>
         <item name="android:maxLines">1</item>
         <item name="android:ellipsize">end</item>
+        <item name="fontFamily">@font/comic</item>
     </style>
     <style name="text_oneLine">
         <item name="android:maxLines">1</item>
         <item name="android:ellipsize">end</item>
+        <item name="fontFamily">@font/comic</item>
     </style>
     <style name="text_oneLine_18">
         <item name="android:maxLines">1</item>
         <item name="android:ellipsize">end</item>
         <item name="android:textSize">18sp</item>
         <item name="android:textColor">?android:attr/textColorPrimary</item>
+        <item name="fontFamily">@font/comic</item>
     </style>
     <style name="text_oneLine_16">
         <item name="android:maxLines">1</item>
         <item name="android:ellipsize">end</item>
         <item name="android:textSize">16sp</item>
         <item name="android:textColor">?android:attr/textColorPrimary</item>
+        <item name="fontFamily">@font/comic</item>
     </style>
     <style name="navigation" parent="Theme.AppCompat.Light">
         <item name="colorPrimary">#2B2B2B</item>
